changed the package names for all the mock processors

--- a/trunk/GeoSpeed/processors.properties
+++ b/trunk/GeoSpeed/processors.properties
@@ -1,13 +1,13 @@
-WmsGetCapabilitiesProcessor=com.fgm.jp.ogc.test.wms.mock.MockWmsGetCapabilitiesProcessor
-WmsGetMapProcessor=com.fgm.jp.ogc.test.wms.mock.MockWmsGetMapProcessor
-WmsGetFeatureInfoProcessor=com.fgm.jp.ogc.test.wms.mock.MockWmsGetFeatureInfoProcessor
-WmsDescribeLayerProcessor=com.fgm.jp.ogc.test.wms.mock.MockWmsDescribeLayerProcessor
-WfsGetCapabilitiesProcessor=com.fgm.jp.ogc.test.wfs.mock.MockWfsGetCapabilitiesProcessor
-WfsDescribeFeatureTypeProcessor=com.fgm.jp.ogc.test.wfs.mock.MockWfsDescribeFeatureTypeProcessor
-WfsGetFeatureProcessor=com.fgm.jp.ogc.test.wfs.mock.MockWfsGetFeatureProcessor
-WfsGetGmlObjectProcessor=com.fgm.jp.ogc.test.wfs.mock.MockWfsGetGmlObjectProcessor
-WfsLockFeatureProcessor=com.fgm.jp.ogc.test.wfs.mock.MockWfsLockFeatureProcessor
-WfsTransactionProcessor=com.fgm.jp.ogc.test.wfs.mock.MockWfsTransactionProcessor
-WcsGetCapabilitiesProcessor=com.fgm.jp.ogc.test.wcs.mock.MockWcsGetCapabilitiesProcessor
-WcsDescribeCoverageProcessor=com.fgm.jp.ogc.test.wcs.mock.MockWcsDescribeCoverageProcessor
-WcsGetCoverageProcessor=com.fgm.jp.ogc.test.wcs.mock.MockWcsGetCoverageProcessor
+WmsGetCapabilitiesProcessor=org.geospeed.ogc.test.wms.mock.MockWmsGetCapabilitiesProcessor
+WmsGetMapProcessor=org.geospeed.ogc.test.wms.mock.MockWmsGetMapProcessor
+WmsGetFeatureInfoProcessor=org.geospeed.ogc.test.wms.mock.MockWmsGetFeatureInfoProcessor
+WmsDescribeLayerProcessor=org.geospeed.ogc.test.wms.mock.MockWmsDescribeLayerProcessor
+WfsGetCapabilitiesProcessor=org.geospeed.ogc.test.wfs.mock.MockWfsGetCapabilitiesProcessor
+WfsDescribeFeatureTypeProcessor=org.geospeed.ogc.test.wfs.mock.MockWfsDescribeFeatureTypeProcessor
+WfsGetFeatureProcessor=org.geospeed.ogc.test.wfs.mock.MockWfsGetFeatureProcessor
+WfsGetGmlObjectProcessor=org.geospeed.ogc.test.wfs.mock.MockWfsGetGmlObjectProcessor
+WfsLockFeatureProcessor=org.geospeed.ogc.test.wfs.mock.MockWfsLockFeatureProcessor
+WfsTransactionProcessor=org.geospeed.ogc.test.wfs.mock.MockWfsTransactionProcessor
+WcsGetCapabilitiesProcessor=org.geospeed.ogc.test.wcs.mock.MockWcsGetCapabilitiesProcessor
+WcsDescribeCoverageProcessor=org.geospeed.ogc.test.wcs.mock.MockWcsDescribeCoverageProcessor
+WcsGetCoverageProcessor=org.geospeed.ogc.test.wcs.mock.MockWcsGetCoverageProcessor
