added new request types and their processors to the factories as well as updating the smoketest to test them

--- a/GeoSpeed/processors.properties
+++ b/GeoSpeed/processors.properties
@@ -2,3 +2,6 @@ WmsGetCapabilitiesProcessor=org.geospeed.test.wms.mock.MockWmsGetCapabilitiesPro
 WmsGetMapProcessor=org.geospeed.test.wms.mock.MockWmsGetMapProcessor
 WmsGetFeatureInfoProcessor=org.geospeed.test.wms.mock.MockWmsGetFeatureInfoProcessor
 WmsDescribeLayerProcessor=org.geospeed.test.wms.mock.MockWmsDescribeLayerProcessor
+WmsGetLegendGraphicProcessor=org.geospeed.test.wms.mock.MockWmsGetLegendGraphicProcessor
+WmsGetStylesProcessor=org.geospeed.test.wms.mock.MockWmsGetStylesProcessor
+WmsPutStylesProcessor=org.geospeed.test.wms.mock.MockWmsPutStylesProcessor
