--- a/trunk/GeoSpeed/web/web.xml
+++ b/trunk/GeoSpeed/web/web.xml
@@ -1,8 +1,9 @@
 <web-app>
 	<servlet>
 		<servlet-name>WMS</servlet-name>
-		<servlet-class>org.geospeed.ogc.impl.wms.web.OgcWmsServlet</servlet-class>
+		<servlet-class>org.geospeed.impl.wms.web.OgcWmsServlet</servlet-class>
 	</servlet>
+	<!--
 	<servlet>
 		<servlet-name>WFS</servlet-name>
 		<servlet-class>org.geospeed.ogc.impl.wfs.web.OgcWfsServlet</servlet-class>
@@ -11,11 +12,12 @@
 		<servlet-name>WCS</servlet-name>
 		<servlet-class>org.geospeed.ogc.impl.wcs.web.OgcWcsServlet</servlet-class>
 	</servlet>
-
+-->
 	<servlet-mapping>
 		<url-pattern>/wms</url-pattern>
 		<servlet-name>WMS</servlet-name>
 	</servlet-mapping>
+	<!-- 
 	<servlet-mapping>
 		<url-pattern>/wfs</url-pattern>
 		<servlet-name>WFS</servlet-name>
@@ -24,4 +26,5 @@
 		<url-pattern>/wcs</url-pattern>
 		<servlet-name>WCS</servlet-name>
 	</servlet-mapping>
+	-->
 </web-app>
